Fixed scaling issues on homepage. Left and right sides of homepage will now wrap. Profile photo will not overlap the skills section

--- a/styles.css
+++ b/styles.css
@@ -41,19 +41,19 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 24px;
+    flex-wrap: wrap;
+    min-height: 600px;
+    gap: 2%;
 }
 
 .homeLeft,
 .homeRight {
-    flex-shrink: 1;
-}
-
-.homeLeft {
     display: flex;
     flex-direction: column;
     justify-content: start;
     gap: 12px;
+    flex: 1 1 49%;
+    min-width: 250px;
 }
 
 .logo {
@@ -107,10 +107,13 @@ h1 {
 }
 
 .profileImage {
+    display: flex;
+    flex: 1;
     border: medium solid #22223b;
     border-radius: 125px;
-    height: 20vw;
-    width: auto;
+
+    width: 100%;
+    height: auto;
 }
 
 #projects,
